gccida/c2/mark_effect
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_effect/src/cfgcleanup.c:674:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v2.rtwint = ( __int64)exp->fld[0]; 
                      ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_effect/src/cfgcleanup.c:685:23: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( unsigned int)( mode_class_0[v4] - 5) < 2 ) 
                      ^~~~~~~~~~~~
                      mode_class
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_effect/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_effect/src/cfgcleanup.c:713:55: error: expected expression
if ( rtx_equal_for_cselib_p( exp->fld[0].rtx, *( rtx *)&exp[1]) ) 
                                                      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_effect/src/cfgcleanup.c:729:23: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( unsigned int)( mode_class_0[v9] - 5) >= 2 ) 
                      ^~~~~~~~~~~~
                      mode_class
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_effect/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_effect/src/obj/cfgcleanup.o] Error 1
